# MandelaPremium

./: build.gradle  gradle.properties  settings.gradle
KeyPath/: KeyStore
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about_mandela.html  coming_soon.json  help.json  mandela_benefits.html  mandela_faq.html  mandela_tc.html  scan_lottie.json
app/src/main/cpp/: CMakeLists.txt  native_urls.cpp
app/src/main/res/anim/: fade_in.xml  left_to_right_motion.xml  nav_default_pop_enter_anim.xml  slide_from_left_bounce.xml  slide_from_right_bounce.xml  up_down.xml  zoom_in.xml  zoom_out.xml
app/src/main/res/drawable/: alert_message_background.xml  arrow_drop_down.xml  black_border_bg.xml  border_cancellation_user.xml  border_yellow_back_white.xml  bottom_corner_radius.xml  delete.xml  dotted_bg_white.xml  dotted_bg_yellow.xml  edit_text_with_brder.xml  gradiant_button.xml  gradient_blue.xml  grey_corner_bg.xml  halfoval_show_more.xml  ic_add.xml  ic_arrow_down.xml  ic_arrow_drop_down.xml  ic_article_24.xml  ic_attachment.xml  ic_call.xml  ic_close_red.xml  ic_coins.xml  ic_delete.xml  ic_email.xml  ic_email__1_.xml  ic_eye.xml  ic_forward_arrow.xml  ic_gourp_123.xml  ic_green_check.xml  ic_group_187.xml  ic_group_2566.xml  ic_group_275.xml  ic_group_474.xml  ic_info.xml  ic_location.xml  ic_logout.xml  ic_mask_group_12.xml  ic_mask_group_14.xml  ic_mask_group_2.xml  ic_mask_group_20.xml  (+45 more)
app/src/main/res/layout/: activity_buy_gift.xml  activity_buy_gift_details.xml  (+68 more)
gradle/wrapper/: gradle-wrapper.properties
(+150 files in other folders)
